--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,10 @@
 <html>
 	<head>
 		<title>Git</title>
+		<link rel = "stylesheet" href = "css/style.css">
 	</head>
 	<body>
-		Урок!
+		<h1>Урок!</h1>
 		<p>Новое изменение index.html</p>
 	</body>
 </html>
