--- a/www/index.html
+++ b/www/index.html
@@ -4,8 +4,6 @@
 		<link rel = "stylesheet" href = "css/style.css">
 	</head>
 	<body>
-		<h1>Урок!</h1>
-		<p>Новое изменение index.html</p>
-		<p>Еще одно изменение</p>
+		<h2>ВИРУСССС!!</h2>
 	</body>
 </html>
