--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,6 @@
 		<link rel = "stylesheet" href = "css/style.css">
 	</head>
 	<body>
-		<h2>ÂÈÐÓÑÑÑÑ!!</h2>
+		<p>sjdlfklsfgkskgd</p>
 	</body>
 </html>
